@@ -234,7 +234,7 @@ ARG_CONSTRUCTOR(arg_init)
 				#if defined(UNIX_PATH_SEMANTICS)
 				{
 					/* If necessary, indicate that this parameter was quoted. */
-					if(__wildcard_quote_parameter(__argc) < 0)
+					if(__expand_wildcard_args && __wildcard_quote_parameter(__argc) < 0)
 						goto out;
 				}
 				#endif /* UNIX_PATH_SEMANTICS */
@@ -319,7 +319,7 @@ ARG_CONSTRUCTOR(arg_init)
 		{
 			/* If necessary, expand wildcard patterns found in the command
 			   line string into file and directory names. */
-			if(__wildcard_expand_init() < 0)
+			if(__expand_wildcard_args && __wildcard_expand_init() < 0)
 				goto out;
 		}
 		#endif /* UNIX_PATH_SEMANTICS */
